--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>情緒視覺實驗室 V10.0</title>
+    <title>情緒視覺實驗室</title>
     <style>
         :root { --primary: #6c5ce7; --bg: #f4f7f6; --danger: #d63031; --warning: #f1c40f; }
         * { box-sizing: border-box; touch-action: manipulation; }
@@ -11,25 +11,19 @@
         .card { background: white; width: 100%; max-width: 600px; margin: 10px; padding: 25px; border-radius: 30px; box-shadow: 0 10px 30px rgba(0,0,0,0.08); }
         .setup-ui { display: flex; gap: 8px; margin-bottom: 15px; flex-wrap: wrap; }
         input, select, textarea { font-size: 16px !important; padding: 12px; border: 2px solid #eee; border-radius: 12px; outline: none; }
-        .mood-tag { font-size: 32px; font-weight: bold; color: var(--primary); text-align: center; margin-bottom: 10px; }
+        .mood-tag { font-size: 32px; font-weight: bold; color: var(--primary); text-align: center; margin-bottom: 5px; }
+        .timer-info { text-align: center; font-size: 12px; color: #aaa; margin-bottom: 10px; font-family: monospace; }
         .controls-group { background: #fdfdfd; padding: 15px; border-radius: 20px; border: 1px solid #eee; margin-bottom: 15px; }
         .control-item { display: flex; align-items: center; gap: 15px; margin-bottom: 10px; }
-        
-        /* 色彩滑軌 */
-        #colorSlider { 
-            flex: 1; -webkit-appearance: none; height: 15px; border-radius: 10px; 
-            background: linear-gradient(to right, #ff0000, #ff8000, #ffff00, #80ff00, #00ff00, #00ff80, #00ffff, #0080ff, #0000ff, #8000ff, #ff00ff, #ff0080, #ff0000); 
-        }
+        #colorSlider { flex: 1; -webkit-appearance: none; height: 15px; border-radius: 10px; background: linear-gradient(to right, #ff0000, #ff8000, #ffff00, #80ff00, #00ff00, #00ff80, #00ffff, #0080ff, #0000ff, #8000ff, #ff00ff, #ff0080, #ff0000); }
         #colorSlider::-webkit-slider-thumb { -webkit-appearance: none; width: 24px; height: 24px; background: white; border: 4px solid #333; border-radius: 50%; }
-
-        .canvas-container { position: relative; border: 3px solid #f0f0f0; border-radius: 20px; background: white; overflow: hidden; }
+        .canvas-container { border: 3px solid #f0f0f0; border-radius: 20px; background: white; overflow: hidden; }
         canvas { display: block; width: 100%; aspect-ratio: 4 / 3; touch-action: none; cursor: crosshair; }
         .toolbar { display: flex; padding: 12px; background: #fafafa; border-bottom: 1px solid #eee; justify-content: space-between; align-items: center; }
         .tool-btn { border: none; padding: 10px 16px; border-radius: 12px; font-weight: bold; cursor: pointer; font-size: 14px; }
         .btn-undo { background: var(--warning); color: #444; }
         .btn-clear { background: var(--danger); color: white; }
         .btn-next { width: 100%; padding: 18px; background: var(--primary); color: white; border: none; border-radius: 20px; cursor: pointer; font-weight: bold; font-size: 18px; margin-top: 15px; }
-
         #fb-overlay { display: none; position: fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.65); z-index:99; backdrop-filter: blur(3px); }
         #fb-box { display: none; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 85%; max-width: 450px; background: white; padding: 30px; border-radius: 25px; text-align: center; z-index: 100; }
     </style>
@@ -54,14 +48,15 @@
         </div>
 
         <div class="mood-tag" id="mood-label">心情：喜</div>
+        <div class="timer-info" id="timer-display">計時中...</div>
 
         <div class="controls-group">
             <div class="control-item">
-                <span style="font-size:13px; font-weight:bold;">選擇色彩</span>
+                <span style="font-size:13px; font-weight:bold;">色彩</span>
                 <input type="range" id="colorSlider" min="0" max="359" step="1" value="0" oninput="updateBrush()">
             </div>
             <div class="control-item">
-                <span style="font-size:13px; font-weight:bold;">筆觸大小</span>
+                <span style="font-size:13px; font-weight:bold;">筆觸</span>
                 <input type="range" id="sizeSlider" min="2" max="35" value="5" oninput="updateBrush()" style="flex:1;">
                 <div style="width:40px; display:flex; justify-content:center;"><div id="brushInd"></div></div>
             </div>
@@ -69,28 +64,32 @@
 
         <div class="canvas-container">
             <div class="toolbar">
-                <button class="tool-btn btn-undo" onclick="undo()">↩️ 復原一步</button>
-                <span id="color-info" style="font-size:12px; color:#888; font-family: monospace; font-weight: bold;">HEX: #FF0000 (0°)</span>
-                <button class="tool-btn btn-clear" onclick="clearCanvas()">🗑️ 全部清空</button>
+                <button class="tool-btn btn-undo" onclick="undo()">↩️ 復原</button>
+                <span id="color-info" style="font-size:12px; color:#555; font-family: monospace; font-weight: bold;">HEX: #FF0000 (0°)</span>
+                <button class="tool-btn btn-clear" onclick="clearCanvas()">🗑️ 清空</button>
             </div>
             <canvas id="canvas"></canvas>
         </div>
 
-        <textarea id="mood-desc" rows="2" placeholder="為什麼這樣畫？寫下你的想法..." style="width:100%; margin-top:15px;"></textarea>
+        <textarea id="mood-desc" rows="2" placeholder="為什麼這樣畫？寫下你的繪圖想法" style="width:100%; margin-top:15px;"></textarea>
         <button class="btn-next" id="action-btn" onclick="checkAndNext()">保存並繼續 (1/4) ✨</button>
     </div>
 
     <script>
-        const SCRIPT_URL = "你的腳本URL"; 
+        const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbwF-En5nWBBIe9H9uVsjhz3YTWFQEkwLm3RAAbsl7gNKdBHq5lbHc3FMy_wxOWLD2YLEQ/exec"; 
         const moods = ["喜", "怒", "哀", "樂"];
         let step = 0, finalData = [], startTime = Date.now(), curColor = "#ff0000", curSize = 5, history = [], hasDrawn = false, drawing = false;
 
         const canvas = document.getElementById('canvas'), ctx = canvas.getContext('2d'), brushInd = document.getElementById('brushInd');
 
-        // HSL 轉 HEX 的輔助函數，用於後台精確記錄
+        // 每秒更新一次顯示計時（選做，可增加實驗儀式感）
+        setInterval(() => {
+            const sec = Math.floor((Date.now() - startTime) / 1000);
+            document.getElementById('timer-display').innerText = `本關已用時：${sec} 秒`;
+        }, 1000);
+
         function hslToHex(h, s, l) {
-            l /= 100;
-            const a = s * Math.min(l, 1 - l) / 100;
+            l /= 100; const a = s * Math.min(l, 1 - l) / 100;
             const f = n => {
                 const k = (n + h / 30) % 12;
                 const color = l - a * Math.max(Math.min(k - 3, 9 - k, 1), -1);
@@ -102,7 +101,7 @@
         function updateBrush() {
             const h = document.getElementById('colorSlider').value;
             curSize = document.getElementById('sizeSlider').value;
-            curColor = hslToHex(h, 100, 50); // 獲取 HEX 色碼
+            curColor = hslToHex(parseInt(h), 100, 50);
             brushInd.style.cssText = `width:${curSize}px; height:${curSize}px; background:${curColor}; border-radius:50%;`;
             document.getElementById('color-info').innerText = `HEX: ${curColor} (${h}°)`;
         }
@@ -112,11 +111,7 @@
         function clearCanvas() { ctx.fillStyle="white"; ctx.fillRect(0,0,canvas.width,canvas.height); save(); hasDrawn=false; }
         function save() { history.push(canvas.toDataURL()); if(history.length>15) history.shift(); }
         function undo() { if(history.length>1) { history.pop(); let img=new Image(); img.src=history[history.length-1]; img.onload=()=>ctx.drawImage(img,0,0); } }
-
-        function getPos(e) { 
-            const r = canvas.getBoundingClientRect(), c = e.touches ? e.touches[0] : e;
-            return { x: c.clientX - r.left, y: c.clientY - r.top }; 
-        }
+        function getPos(e) { const r = canvas.getBoundingClientRect(), c = e.touches ? e.touches[0] : e; return { x: c.clientX - r.left, y: c.clientY - r.top }; }
         canvas.addEventListener('mousedown', start); canvas.addEventListener('touchstart', (e)=>{start(e); e.preventDefault();}, {passive:false});
         function start(e) { drawing=true; hasDrawn=true; const {x,y}=getPos(e); ctx.beginPath(); ctx.moveTo(x,y); }
         canvas.addEventListener('mousemove', move); canvas.addEventListener('touchmove', (e)=>{move(e); e.preventDefault();}, {passive:false});
@@ -124,75 +119,48 @@
         window.addEventListener('mouseup', ()=>{if(drawing)save(); drawing=false;});
         window.addEventListener('touchend', ()=>{if(drawing)save(); drawing=false;});
 
-        function getAIResponse(mood, desc) {
-            const dangerWords = ["自殺", "想死", "離開世界", "解脫", "沒意義", "絕望", "自殘", "不想活"];
-            if (dangerWords.some(w => desc.includes(w))) {
-                return { title: "❤️ 溫馨關懷", text: "感受到你現在正承受著沉重的壓力...辛苦你了。請記得你並不孤單，撥打 1925 讓有人陪你一起面對這份心情。", color: "#ff7675" };
-            }
-            const normal = {
-                "喜": "你的線條真活潑！這份快樂的能量完全傳達出來了！☀️",
-                "怒": "很有衝擊力的表達！成功將澎湃的能量轉化為筆觸，太棒了！🔥",
-                "哀": "這幅畫有種安靜的深度。每一筆線條都在溫柔地跟自己對話，辛苦了。🕯️",
-                "樂": "太棒了！這種輕快且繽紛的感覺，讓看畫的人心情也跟著明亮了！🌈"
-            };
-            return { title: "🌟 AI 觀察筆記", text: normal[mood], color: "#f1c40f" };
-        }
-
         function checkAndNext() {
             const sid = document.getElementById('sid').value, age = document.getElementById('age').value, desc = document.getElementById('mood-desc').value.trim();
-            if(!sid || !age || !hasDrawn || desc.length < 2) return alert("請完整填寫並完成繪圖想法！");
+            if(!sid || !age || !hasDrawn || desc.length < 2) return alert("請完整填寫並完成繪圖！");
 
-            const h = document.getElementById('colorSlider').value;
+            // 重要：計算這一關花了幾秒
+            const timeElapsed = Math.round((Date.now() - startTime) / 1000);
+
             finalData.push({
                 id: sid, age: age, gender: document.getElementById('gender').value,
                 group: document.getElementById('exp-group').value,
                 mood: moods[step], 
-                color_hex: curColor, // 新增：紀錄色標 (HEX)
-                color_h: h,         // 新增：紀錄角度 (Degree)
-                desc: desc, time: Math.round((Date.now()-startTime)/1000)+"s",
+                color_hex: curColor,
+                color_h: document.getElementById('colorSlider').value,
+                desc: desc, 
+                time: timeElapsed, // 傳送純秒數數據
                 image: canvas.toDataURL('image/jpeg', 0.5)
             });
 
             if (document.getElementById('exp-group').value === "AI") {
-                const res = getAIResponse(moods[step], desc);
-                document.getElementById('fb-title').innerText = res.title;
-                document.getElementById('fb-text').innerText = res.text;
-                document.getElementById('fb-box').style.borderTop = `10px solid ${res.color}`;
+                const res = { "喜":"色彩很有活力！☀️", "怒":"爆發力十足！🔥", "哀":"深沈的觸動。🕯️", "樂":"明快而歡愉！🌈" };
+                document.getElementById('fb-text').innerText = res[moods[step]];
                 document.getElementById('fb-overlay').style.display = "block";
                 document.getElementById('fb-box').style.display = "block";
             } else { goNext(); }
         }
 
-        function closeFB() {
-            document.getElementById('fb-overlay').style.display = "none";
-            document.getElementById('fb-box').style.display = "none";
-            goNext();
-        }
-
-        function goNext() {
-            if(step < 3) {
-                step++; startTime = Date.now();
-                document.getElementById('mood-label').innerText = "心情：" + moods[step];
-                document.getElementById('setup-group').style.visibility = "hidden";
-                document.getElementById('mood-desc').value = "";
-                document.getElementById('action-btn').innerText = `保存並繼續 (${step+1}/4) ✨`;
-                clearCanvas(); history=[]; save();
-            } else { submit(); }
+        function closeFB() { document.getElementById('fb-overlay').style.display = "none"; document.getElementById('fb-box').style.display = "none"; goNext(); }
+        function goNext() { 
+            if(step < 3) { 
+                step++; 
+                startTime = Date.now(); // 重置下一關的起始時間
+                document.getElementById('mood-label').innerText = "心情：" + moods[step]; 
+                document.getElementById('mood-desc').value = ""; 
+                document.getElementById('action-btn').innerText = `保存並繼續 (${step+1}/4) ✨`; 
+                clearCanvas(); history=[]; save(); 
+            } else { submit(); } 
         }
 
         async function submit() {
-            const btn = document.getElementById('action-btn');
-            btn.disabled = true; btn.innerText = "數據飛速同步中... 🚀";
-            try {
-                for(let d of finalData) {
-                    await fetch(SCRIPT_URL, { method: 'POST', mode: 'no-cors', body: JSON.stringify(d) });
-                }
-                alert("🎉 實驗數據已同步！感謝參與。");
-                location.reload();
-            } catch(e) {
-                alert("上傳失敗，請檢查網路！");
-                btn.disabled = false;
-            }
+            const btn = document.getElementById('action-btn'); btn.disabled = true; btn.innerText = "數據飛速同步中... 🚀";
+            for(let d of finalData) { await fetch(SCRIPT_URL, { method: 'POST', mode: 'no-cors', body: JSON.stringify(d) }); }
+            alert("🎉 實驗已完成，時間數據已同步！"); location.reload();
         }
         updateBrush();
     </script>
