--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     </div>
 
     <script>
-        const SCRIPT_URL = "你的_GAS_網址"; 
+        const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbzc0In13VMilxTtK-_INDFNK9Qi91c8YN5e23K1rhNfkwLs0oZh4LPK6Az_fdML1UTpgg/exec"; 
         const moods = ["喜", "怒", "哀", "樂"];
         
         // --- 核心工具：HSL 轉 HEX ---
@@ -206,3 +206,4 @@
     </script>
 </body>
 </html>
+
